--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.25.7",
     "@reduxjs/toolkit": "^2.2.5",
     "@zxing/library": "^0.21.3",
+    "antd": "^5.21.5",
     "ethers": "^6.13.1",
     "fyp-frontend": "file:",
     "jsqr": "^1.4.0",
